name:                haskell-import-graph
version:             0.1.0.0
synopsis:            create haskell import graph for graphviz
description:         {
create haskell import graph for graphviz
How to:
> cabal build
> haskell-import-graph
Or,
> haskell-import-graph dist/build/foo/foo-tmp/bar.hi
}
license:             MIT
license-file:        LICENSE
author:              ncaq
maintainer:          ncaq@ncaq.net
copyright:           Copyright (c) 2015 ncaq
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable haskell-import-graph
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base                   >= 4.8   && < 4.9
                     , classy-prelude         >= 0.12  && < 0.13
                     , ghc                    >= 7.10  && < 7.11
                     , graphviz               >= 2999  && < 3000
                     , process                >= 1.2   && < 1.3
                     , text                   >= 1.2   && < 1.3
                     , transformers           >= 0.4   && < 0.5
  default-language:    Haskell2010
  default-extensions:  NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-monomorphism-restriction -fwarn-identities
